# attractor_project

./: ExamplesDescription.md  LISENCE.txt  README.rst  example  requirements.txt  setup.cfg  tox.ini
examples/: example_ODEs.py  example_global_temperature.py  example_heartbeat.py  example_relaxing_music.py  example_solar_cycles.py
examples/solar_cycles_data/: checkpoint  cp.ckpt.data-00000-of-00001  cp.ckpt.index  models_checkpoint.data-00000-of-00001  models_checkpoint.index
examples_docs/: Example_ODE_explanation.rst
src/attractor_project/: tools.py
tests/: test_tools.py
