[metadata]
name = attractor_project
version = version number: 0.0.1
license = MIT
description = A package to explore time series analysis tools
long_description = file: README.rst
author = Ricardo S. P. Lopes
author_email = ojogodascontasdevidro@gmail.com
classifiers=
   Development Status :: 1 - Planning

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
   pandas
   matplotlib.pyplot
   seaborn
   scipy
   sklearn
   bs4
   urllib.request
   requests
   selenium
   csv
   datapackage
   sys
   datetime

[options.packages.find]
where=src